# NORC

./: .gitignore  README.md
.github/workflows/: CI.yml  main.yml  python-publish.yml
acquisition/: install.sh  run.sh
acquisition/benchmarks/lammps/: build.sh  params  settings.sh
acquisition/benchmarks/lulesh/: build.sh  params
acquisition/benchmarks/minife/: build.sh  params
acquisition/benchmarks/minife/resources/: epilogue.sh
acquisition/benchmarks/template/: build.sh  settings.sh
acquisition/config/: build_settings.sh  experiments.cfg  metrics.cfg  modules.sh  noigena_cfg.yaml  noise.cfg
acquisition/config/job_templates/: local.sh  omp_array.sh  omp_loop.sh
acquisition/config/systems/dp-cn-array/: system.sh
acquisition/config/systems/dp-cn-seq-hthread/: system.sh
acquisition/config/systems/dp-esb-array/: batch_prefix  system.sh
acquisition/config/systems/dp-esb-seq/: batch_prefix
acquisition/config/systems/dp-esb-seq-hthread/: batch_prefix  system.sh
acquisition/config/systems/local/: system.sh
acquisition/runner/: benchmark_util.sh  job_status.py  progress.sh  run_benchmarks.sh
acquisition/runner/fake_slurm/: sbatch  squeue  srun
acquisition/util/: clean.sh  config_assistent.sh  install_noigena.sh  install_spack.sh  macros.sh  setup_venv.sh
analysis/: MANIFEST.in  Makefile  README.md  pyproject.toml  setup_environment
analysis/norc/: __init__.py  analysis_ui  analysis_ui.py
analysis/norc/classes/: application_state.py
analysis/norc/core/: analyze.py  generate_test_data.py  plot_rel_dev.py  plotmanager.py  score.py
analysis/norc/helpers/: util.py
analysis/norc/ui/: chart.py  dimension_picker.py  dimension_picker.ui  examine_tab.py  examine_tab.ui  mainwindow.py  mainwindow.ui  qt_utils.py  ratings_tab.py  score_table.py  ui_util.py
analysis/norhc/classes/: application_state.py
analysis/norhc/core/: analyze  analyze.py  generate_test_data.py  plot  plot_rel_dev.py  plotmanager.py  rank  score.py
analysis/norhc/ui/: chart.py  examine_tab.py  mainwindow.ui  qt_utils.py  ratings_tab.py  ui_util.py
artifacts/protools25/: README.md
doc/: adding_benchmarks.md  adding_systems.md  build_settings.md  creating_experiments.md  job_templates.md  plot.md  rank.md
utils/: update_license_header.py
